# spot_ros2

spot_cpp_ros2/: CMakeLists.txt  package.xml
spot_cpp_ros2/api/choreography_protos/bosdyn/: choreography_params.grpc.pb.h  choreography_params.pb.h  choreography_sequence.pb.h  choreography_service.grpc.pb.h
spot_cpp_ros2/include/bosdyn/choreography_protos/bosdyn/api/spot/: choreography_sequence.grpc.pb.h  choreography_service.pb.h
spot_cpp_ros2/include/bosdyn/client/graph_nav/: graph_nav_error_codes.h
spot_cpp_ros2/include/bosdyn/client/power/: power_error_codes.cpp  power_error_codes.h
spot_cpp_ros2/include/bosdyn/protos/bosdyn/api/: alerts.grpc.pb.h  alerts.pb.h  arm_command.grpc.pb.h  arm_command.pb.h  arm_surface_contact.grpc.pb.h  arm_surface_contact.pb.h  arm_surface_contact_service.grpc.pb.h  arm_surface_contact_service.pb.h  auth.grpc.pb.h  auth.pb.h  auth_service.grpc.pb.h  auth_service.pb.h  basic_command.grpc.pb.h  basic_command.pb.h  bddf.grpc.pb.h  bddf.pb.h  data_acquisition.grpc.pb.h  data_acquisition.pb.h  data_acquisition_plugin_service.grpc.pb.h  data_acquisition_plugin_service.pb.h  data_acquisition_service.grpc.pb.h  data_acquisition_service.pb.h  data_acquisition_store.grpc.pb.h  data_acquisition_store.pb.h  data_acquisition_store_service.grpc.pb.h  data_acquisition_store_service.pb.h  data_buffer.grpc.pb.h  data_buffer.pb.h  data_buffer_service.grpc.pb.h  data_buffer_service.pb.h  data_chunk.grpc.pb.h  data_chunk.pb.h  data_index.grpc.pb.h  data_index.pb.h  data_service.grpc.pb.h  data_service.pb.h  directory.grpc.pb.h  directory.pb.h  directory_registration.grpc.pb.h  directory_registration.pb.h  (+114 more)
spot_cpp_ros2/include/bosdyn/protos/bosdyn/api/auto_return/: auto_return.grpc.pb.h  auto_return.pb.h  auto_return_service.grpc.pb.h  auto_return_service.pb.h
spot_cpp_ros2/include/bosdyn/protos/bosdyn/api/autowalk/: autowalk.grpc.pb.h  autowalk.pb.h  autowalk_service.grpc.pb.h  autowalk_service.pb.h  walks.grpc.pb.h  walks.pb.h
spot_cpp_ros2/include/bosdyn/protos/bosdyn/api/docking/: docking.grpc.pb.h  docking.pb.h  docking_service.grpc.pb.h  docking_service.pb.h
spot_cpp_ros2/include/bosdyn/protos/bosdyn/api/graph_nav/: area_callback.grpc.pb.h  area_callback.pb.h  area_callback_service.grpc.pb.h  area_callback_service.pb.h  graph_nav.grpc.pb.h  graph_nav.pb.h  graph_nav_service.grpc.pb.h  graph_nav_service.pb.h  map.grpc.pb.h  map.pb.h  map_processing.grpc.pb.h  map_processing.pb.h  map_processing_service.grpc.pb.h  map_processing_service.pb.h  nav.grpc.pb.h  nav.pb.h  recording.grpc.pb.h  recording.pb.h  recording_service.grpc.pb.h  recording_service.pb.h
spot_cpp_ros2/include/bosdyn/protos/bosdyn/api/mission/: mission.grpc.pb.h  mission.pb.h  mission_service.grpc.pb.h  mission_service.pb.h  nodes.grpc.pb.h  nodes.pb.h  remote.grpc.pb.h  remote.pb.h  remote_service.grpc.pb.h  remote_service.pb.h  util.grpc.pb.h  util.pb.h
spot_cpp_ros2/include/bosdyn/protos/bosdyn/api/spot/: door.grpc.pb.h  door.pb.h  door_service.grpc.pb.h  door_service.pb.h  robot_command.grpc.pb.h  robot_command.pb.h  spot_check.grpc.pb.h  spot_check.pb.h  spot_check_service.grpc.pb.h  spot_check_service.pb.h
spot_cpp_ros2/include/bosdyn/protos/bosdyn/api/spot_cam/: LED.grpc.pb.h  LED.pb.h  audio.grpc.pb.h  audio.pb.h  camera.grpc.pb.h  camera.pb.h  compositor.grpc.pb.h  compositor.pb.h  health.grpc.pb.h  health.pb.h  logging.grpc.pb.h  logging.pb.h  network.grpc.pb.h  network.pb.h  power.grpc.pb.h  power.pb.h  ptz.grpc.pb.h  ptz.pb.h  service.grpc.pb.h  service.pb.h  streamquality.grpc.pb.h  streamquality.pb.h  version.grpc.pb.h  version.pb.h
spot_cpp_ros2/src/: get_image.cpp
spot_description/launch/: description.launch.py
spot_description/urdf/: spot_gen3.urdf  spot_with_gen3.urdf.xacro
spot_driver/launch/: spot_driver.launch.py
spot_driver/spot_driver/: ros_helpers.py  spot_ros2.py
spot_driver_plus/: CMakeLists.txt  package.xml
spot_driver_plus/config/: spot_params.yaml
spot_driver_plus/cpp/: battery_screen.cpp  depth_to_pcl.cpp  gen3_joint_states_republisher.cpp  map_vision.cpp  spot_body_pose.cpp  spot_kinova_controller.cpp  spot_marker.cpp
spot_driver_plus/launch/: controller_launch.py  estop_tf2_launch.py  explore.py  spot_launch.py
spot_driver_plus/python/spot_driver_plus/: estop_wrt_map.py  find_estop_poses.py  gen3_servo_controller.py  get_pcl.py  goto_estop.py  gripper_action_client.py  moveit_action_client.py  moveit_ik.py  press_estop.py  see_estops_with_manipulator.py  single_estop_pose.py  stand_in_front_of_estops.py  yolov8_pose_utils.py
spot_estop_rqt/: package.xml  plugin.xml  setup.cfg  setup.py
spot_estop_rqt/scripts/: spot_estop_rqt
spot_estop_rqt/spot_estop_rqt/: moveit_action_client.py  spot_estop_rqt.py
